--- a/templates/bakat/index.html
+++ b/templates/bakat/index.html
@@ -5,7 +5,7 @@
 <h2>Light Novels</h2><br />
 <ul>
 {% for ln in ln_list %}
-<li><a href="/series/{{ln.id}}" >{{ ln.name }}</a></li>
+<li><a href="{{ ln.get_absolute_url }}" >{{ ln.name }}</a></li>
 {% endfor %}
 </ul>
 {% endif %}
@@ -13,7 +13,7 @@
 <h2>Alternate Languages</h2><br />
 <ul>
 {% for lang in lang_list %}
-<li><a href="/lang/{{lang.id}}" >{{ lang.name }}</a></li>
+<li><a href="{{ lang.get_absolute_url }}" >{{ lang.name }}</a></li>
 {% endfor %}
 </ul>
 {% endif %}
