--- a/templates/btlib/lang.html
+++ b/templates/btlib/lang.html
@@ -1,2 +1,2 @@
-{% extends 'bakat/index.html' %}
+{% extends 'btlib/index.html' %}
 {% block title %}BT Rebuild test - {{ lang.name }}{% endblock %}
