--- a/btlib/templates/flatpages/default.html
+++ b/btlib/templates/flatpages/default.html
@@ -1,4 +1,4 @@
-{% extends 'btlib/nojs/base.html' %}
+{% extends 'btlib/simple/base.html' %}
 {% load md %}
 {% block title %}{{ flatpage.title }}{% endblock %}
 {% block body %}{{ flatpage.content|markdown }}{% endblock %}
